ttruncating bug  fixed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,12 @@ ul, li {
     max-height: 260px;
 }
 
+.item_title {
+    font-size: 0.8rem;
+    padding: 0;
+    margin: 0;
+}
+
 .title .thumbnail {
     padding: 0;
     margin: 0;
